# data_series

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
lib/: CMakeLists.txt
lib/include/: consts.hpp  data_collection.hpp  data_encoding.hpp  data_series.hpp  data_series_iterator.hpp  data_series_properties.hpp  data_series_regression.hpp  functional_data_series.hpp  mutable_data_series.hpp  operational_data_series.hpp  resampled_data_series.hpp  static_data_series.hpp
lib/source/: data_collection.cpp  data_encoding.cpp  data_series_iterator.cpp  data_series_regression.cpp  functional_data_series.cpp  mutable_data_series.cpp  operational_data_series.cpp  resampled_data_series.cpp  static_data_series.cpp
test/: CMakeLists.txt  data_series_collection_tests.cpp  data_series_properties_tests.cpp  data_series_regression_tests.cpp  mutable_data_series_tests.cpp  resamples_data_series_tests.cpp  static_data_series_tests.cpp
